--- a/pages/Integrantes.html
+++ b/pages/Integrantes.html
@@ -22,31 +22,37 @@
         </nav>
     </header> 
 
-    <main>
-        <section>
+    <main class="integ">
             <h1 class="h1-int">Integrantes De Imagine Dragons</h1>
-            <img src="/multimedia/grupo.webp" class="imi" alt="">
-            <article class="card">
-                <img src="../multimedia/DAN.jpg" class="imr" alt="">
+            <img src="/multimedia/grupo.webp"   class="imi" alt="">
+            <section class="secint">
+                <div class="item item1"></div>
+                <article class="card rig">
                 <h3>Dan Reynolds</h3>
                 <p>Daniel Coulter Reynolds Dan, es el séptimo de nueve hijos, nació el 14 de julio en 1987 en Las Vegas, más conocido como Dan Reynolds, es un cantante, compositor y músico estadounidense, reconocido por ser el vocalista principal desde 2009</p>
-            </article>
-            <article class="card">
-                <img src="../multimedia/sermon2.jpg" class="iml" alt="">
-                <h3>Daniel Wayne Sermon</h3>
-                <p>Daniel Wayne Sermon nacido en las Vegas, Nevada, 15 de junio de 1984 es un compositor, músico y productor discográfico estadounidense; mayormente conocido por ser el guitarrista de la banda. Wayne comenzó desde temprana edad a tocar el chelo y la guitarra. Desde que era niño estaba decidido a ser guitarrista. Desde 2009 es integrante de Imagine Dragons</p>
-            </article>
-            <article class="card">
-                <img src="../multimedia/mckee-5.jpg" class="imr" alt="">
+                </article>
+            </section>
+            <section class="secint">
+                <article class="card lef">
+                    <h3>Daniel Wayne Sermon</h3>
+                    <p>Daniel Wayne Sermon nacido en las Vegas, Nevada, 15 de junio de 1984 es un compositor, músico y productor discográfico estadounidense; mayormente conocido por ser el guitarrista de la banda. Wayne comenzó desde temprana edad a tocar el chelo y la guitarra. Desde que era niño estaba decidido a ser guitarrista. Desde 2009 es integrante de Imagine Dragons</p>
+                </article>
+                <div class="item item2"></div>
+            </section>
+            <section class="secint">
+                <div class="item item3"></div>
+                <article class="card lef">
                 <h3>Ben McKee</h3>
                 <p>Benjamin Arthur McKee nacido en Forestville, California, 7 de abril de 1985, más conocido como Ben McKee, es un músico estadounidense, mayormente conocido por ser el bajista de la banda desde 2009</p>
-            </article>
-            <article class="card">
-                <img src="../multimedia/daniel-platzman.webp" class="iml" alt="">
-                <h3>Daniel Platzman</h3>
-                <p>Daniel James Platzman, más conocido como Daniel Platzman, es un músico estadounidense, más conocido por ser el baterista de la banda desde 2011. Platzman nació el 28 de septiembre de 1986 en Atlanta, Georgia. antes de unirse a la banda Estudió en Berklee School of Music, donde obtuvo un grado en la composición de bandas sonoras </p>
-            </article>
-            <img src="" alt="">
+            </section>
+            <section class="secint">
+                </article>
+                <article class="card rig">
+                    <h3>Daniel Platzman</h3>
+                    <p>Daniel James Platzman, más conocido como Daniel Platzman, es un músico estadounidense, más conocido por ser el baterista de la banda desde 2011. Platzman nació el 28 de septiembre de 1986 en Atlanta, Georgia. antes de unirse a la banda Estudió en Berklee School of Music, donde obtuvo un grado en la composición de bandas sonoras </p>
+                    </article>
+                <div class="item item4"></div>
+            </section>
     </main>
 
     <footer>
