empiezo a implementar grids en historia y a hacer la vista movile

--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -25,14 +25,29 @@
     <main>
         <h1 class="h1-int">Historia</h1>
         <p class="parra">En 2008, el vocalista Dan Reynolds conoció al baterista Andrew Tolman en la Universidad Brigham Young, donde ambos eran estudiantes Reynolds y Tolman añadieron a Andrew Beck, Dave Lemke, y Aurora Florence para tocar la guitarra, el bajo, y el piano, respectivamente.</p>
-        <img src="../multimedia/integrantes anteriores.jpg" class="imi" alt="">
-        <article> 
-        <img src="../multimedia/imagine dragon antes parte 2.jpg"  class="imr">
+        <img src="../multimedia/integrantes anteriores.jpg" alt="" class="imi">
+        <article class="contenedor-historia">
+        <div class="histem img1"></div>
+        <div class="histem">
         <p class="parra">Su nombre es un anagrama de Ragged Insomnia que es el nombre con el que inició la banda, antes de cambiarlo a Imagine Dragons. Tolman reclutó a Wayne Sermon, su viejo amigo de la escuela secundaria, que se había graduado de Berklee College of Music, para tocar la guitarra. Tolman más tarde reclutó a su esposa, Brittany Tolman, para cantar en los coros.</p>
-        <img src="../multimedia/imagine dragon antes.jpg" class="iml" alt="">
+    </div>
+    <div class="histem img2"></div>
+    <div class="histem">
         <p class="parra">Lemke dejó la banda más adelante, al mismo tiempo que Sermon reclutaba a otro estudiante de música de Berklee, Ben McKee, para trabajar como el bajista y terminar la formación La banda ganó un gran número de seguidores en su ciudad natal, Provo, Utah, antes de que los miembros se trasladaran a Las Vegas, la ciudad natal de Dan Reynolds, donde la banda grabó y lanzó sus primeros tres reproducciones extendidas (ep) La banda lanzó los EP titulados Imagine Dragons y Hell and Silence en 2010, ambos grabados en Battle Born Studios, en Las Vegas.</p>
-        <a href="https://youtu.be/r1epIsAgQeQ"><img src="/multimedia/600x600bf-60.jpg" class="imr" alt=""></a>
-        <p class="parra">Tuvieron su primer gran concierto cuando el vocalista de Train, Pat Monahan, cayó enfermo justo antes del Bite of Las Vegas Festival 2009. Imagine Dragons fue llamado para presentarse frente a una multitud de más de 26,000 personas. Lograron obtener varios premios locales.</p>
+    </div>
+        <a href="https://youtu.be/r1epIsAgQeQ" class="linkalbum"> escuchar
+        </a>
+    <div class="histem">
+        <p class="parra">Tuvieron su primer gran concierto cuando el vocalista de Train, Pat Monahan, cayó enfermo justo antes del Bite of Las Vegas Festival 2009. Imagine Dragons fue llamado para presentarse frente a una multitud de más de 26,000 personas. Lograron obtener varios premios locales. Eventualmente los Tolman dejarían el grupo y Daniel Platzman sería reclutado en agosto de 2011 por invitación de Ben McKee, junto a la tecladista Theresa Flaminio; antes de la firma del contrato discográfico de la banda en noviembre de 2011</p>
+    </div>
+    <div class="histem img3"></div>
+    <div class="histem">
+    <p class="parra">Theresa Flaminio partió de Imagine Dragons a principios de 2012, dejándolos como un cuarteto. La banda trabajó en estrecha colaboración con Alex da Kid, con quien grabaron su primer gran lanzamiento en Westlake Recording Studios en West Hollywood, California. Un EP titulado <a href="https://open.spotify.com/intl-es/album/    5eJa2BP7rrqkrpFpTiANPg?autoplay=true" class="con">Continued Silence</a> fue lanzado el día de San Valentín.</p>
+</div>
+<div class="histem">
+    <p>c</p>
+</div>
+
     </article>
     </main>
     
