--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -107,8 +107,9 @@
             <li id="gir"><a href="../pages/Gira.html">Gira</a></li>
         </ul>
     </nav>
-
 </footer>
-    
+<a href="#" class="subir">
+    <i class="fa-solid fa-angle-up"></i>
+</a>    
 </body>
 </html>
