--- a/pages/Discografia.html
+++ b/pages/Discografia.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discografia</title>
+    <!-- bs -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- bs -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="shortcut icon" href="../multimedia/Imagine-Dragons-Logo-PNG.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
@@ -23,36 +26,39 @@
     
     <main id="medi">
     <h1 class="h1-int">Discografia</h1>
-    <img src="../multimedia/Imagine-Dragons-Logo-PNG.png" class="imi" alt="">
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/0q0BORsAWpbFNf7UqWwDbd?utm_source=generator" width="33%" height="500px" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6nxDQi0FeEwccEPJeNySoS?utm_source=generator" width="33%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    <iframe style="border-radius:12px" src="https://open.spotify.com/embed/album/6yiXkzHvC0OTmhfDQOEWtS?utm_source=generator" width="33%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-
+    <div class="imi1"></div>
+    <iframe class="col-12 col-sm-6 coll" src="https://open.spotify.com/embed/album/0q0BORsAWpbFNf7UqWwDbd?utm_source=generator" height="200px"></iframe>
+    <iframe class="col-12 col-sm-6 colr"src="https://open.spotify.com/embed/album/6nxDQi0FeEwccEPJeNySoS?utm_source=generator" height="200px"></iframe>
+    <iframe class="col-12 col-sm-6 coll" src="https://open.spotify.com/embed/album/0Ikw6ho559687KCPbSjr0K?utm_source=generator" height="200px"></iframe>
+    <iframe class="col-12 col-sm-6 colr" src="https://open.spotify.com/embed/album/33pt9HBdGlAbRGBHQgsZsU?utm_source=generator" height="200px"></iframe>
+    <iframe class="col-12 col-sm-6 coll" src="https://open.spotify.com/embed/album/3JfSxDfmwS5OeHPwLSkrfr?utm_source=generator"height="200px"></iframe>
+    <iframe class="col-12 col-sm-6 colr" src="https://open.spotify.com/embed/album/6yiXkzHvC0OTmhfDQOEWtS?utm_source=generator" height="200px"></iframe>
     </main>
     <footer>
-        <div class="redes">
-        <a href="#">
-            <i class="fa-brands fa-x-twitter" ></i>
-       </a>
-        <a href="#">
-           <i class="fa-brands fa fa-instagram"></i>
-       </a>
-        <a href="#">
-           <i class="fa-brands fa-facebook"></i>
-       </a>    
-       </div>
-       <nav class="foo">
-       <h3>este contenido esta protegido por copyright</h3> 
+    <div class="redes">
+    <a href="#">
+        <i class="fa-brands fa-x-twitter" ></i>
+    </a>
+    <a href="#">
+        <i class="fa-brands fa fa-instagram"></i>
+    </a>
+    <a href="#">
+        <i class="fa-brands fa-facebook"></i>
+    </a>    
+    </div>
+    <nav class="foo">
+    <h3>este contenido esta protegido por copyright</h3> 
         <h4>paginas</h4>
-       <ul>
-            <li id="hom"><a href="../index.html">Home</a></li>
-            <li id="int"><a href="../pages/Integrantes.html">Integrantes</a></li>
-            <li id="his"><a href="../pages/Historia.html">Historia</a></li>
-            <li id="dis"><a href="#">Discografia</a></li>
-            <li id="gir"><a href="../pages/Gira.html">Gira</a></li>
-       </ul>
-       </nav>
+    <ul>
+        <li id="hom"><a href="../index.html">Home</a></li>
+        <li id="int"><a href="../pages/Integrantes.html">Integrantes</a></li>
+        <li id="his"><a href="../pages/Historia.html">Historia</a></li>
+        <li id="dis"><a href="#">Discografia</a></li>
+        <li id="gir"><a href="../pages/Gira.html">Gira</a></li>
+    </ul>
+    </nav>
 
-   </footer>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
