hago responsive el header

--- a/index.html
+++ b/index.html
@@ -9,36 +9,41 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
     <header>
+        <div class="back">
+            <div class="menu container">
+                <a href="#" class="prin">Home</a>
+                <input type="checkbox" id="menu"/>
+                <label for="menu">
+                    <i class="fa-solid fa-bars menu-icono"></i>
+                </label>        
         <nav class="barra">
             <ul>
-                <li id="hom"><a href="#">Home</a></li>
                 <li id="int"><a href="pages/Integrantes.html">Integrantes</a></li>
                 <li id="his"><a href="pages/Historia.html">Historia</a></li>
                 <li id="dis"><a href="pages/Discografia.html">Discografia</a></li>
                 <li id="gir"><a href="pages/Gira.html">Gira</a></li>
             </ul>
         </nav>
-    </header>
-
+        </div>    
+        </div>
+    </header>  
     <main id="inx">
-       <div class="call">
+    <div class="call">
         <h1>Imagine Dragons</h1>
         <p>Imagine Dragons es una banda estadounidense de pop rock originaria de Las Vegas, Nevada. Está compuesta por Dan Reynolds (vocalista), Wayne Sermon (guitarrista), Ben McKee (bajista) y Daniel Platzman (baterista). Ganó el reconocimiento mundial con el lanzamiento de su álbum de estudio debut Night Visions (2012), y con su canción "It's Time".</p>
         <a href="/pages/Historia.html"> saber mas</a>
-       </div> 
+    </div> 
     </main>
-
-     <footer>
-         <div class="redes">
-         <a href="#">
-             <i class="fa-brands fa-x-twitter" ></i>
+    <footer>
+        <div class="redes">
+        <a href="#">
+            <i class="fa-brands fa-x-twitter" ></i>
         </a>
-         <a href="#">
+        <a href="#">
             <i class="fa-brands fa fa-instagram"></i>
         </a>
-         <a href="#">
+        <a href="#">
             <i class="fa-brands fa-facebook"></i>
         </a>    
         </div>
@@ -54,6 +59,5 @@
         </ul>
         </div>
     </footer>
-
 </body>
 </html>
