--- a/pages/Discografia.html
+++ b/pages/Discografia.html
@@ -13,17 +13,24 @@
 </head>
 <body>
     <header>
+        <div class="back">
+            <div class="menu container">
+                <a href="#" class="prin">Discografia</a>
+                <input type="checkbox" id="menu"/>
+                <label for="menu">
+                    <i class="fa-solid fa-bars menu-icono"></i>
+                </label>        
         <nav class="barra">
             <ul>
-                <li id="hom"><a href="../index.html">Home</a></li>
                 <li id="int"><a href="../pages/Integrantes.html">Integrantes</a></li>
                 <li id="his"><a href="../pages/Historia.html">Historia</a></li>
-                <li id="dis"><a href="#">Discografia</a></li>
+                <li id="dis"><a href="../index.html">Home</a></li>
                 <li id="gir"><a href="../pages/Gira.html">Gira</a></li>
             </ul>
         </nav>
+        </div>    
+        </div>
     </header> 
-    
     <main id="medi">
     <h1 class="h1-int">Discografia</h1>
     <div class="imi1"></div>
