--- a/pages/Gira.html
+++ b/pages/Gira.html
@@ -14,15 +14,23 @@
 </head>
 <body>
     <header>
+        <div class="back">
+            <div class="menu container">
+                <a href="#" class="prin">Gira</a>
+                <input type="checkbox" id="menu"/>
+                <label for="menu">
+                    <i class="fa-solid fa-bars menu-icono"></i>
+                </label>        
         <nav class="barra">
             <ul>
-                <li id="hom"><a href="../index.html">Home</a></li>
                 <li id="int"><a href="../pages/Integrantes.html">Integrantes</a></li>
                 <li id="his"><a href="../pages/Historia.html">Historia</a></li>
                 <li id="dis"><a href="../pages/Discografia.html">Discografia</a></li>
-                <li id="gir"><a href="#">Gira</a></li>
+                <li id="gir"><a href="../index.html">Home</a></li>
             </ul>
         </nav>
+        </div>    
+        </div>
     </header> 
     <main id="magi">
     <h1 class="h1-int">Gira</h1>
