--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -11,15 +11,23 @@
 <body>
 
     <header>
+        <div class="back">
+            <div class="menu container">
+                <a href="#" class="prin">Historia</a>
+                <input type="checkbox" id="menu"/>
+                <label for="menu">
+                    <i class="fa-solid fa-bars menu-icono"></i>
+                </label>        
         <nav class="barra">
             <ul>
-                <li id="hom"><a href="../index.html">Home</a></li>
                 <li id="int"><a href="../pages/Integrantes.html">Integrantes</a></li>
-                <li id="his"><a href="#">Historia</a></li>
+                <li id="his"><a href="../index.html">Home</a></li>
                 <li id="dis"><a href="../pages/Discografia.html">Discografia</a></li>
                 <li id="gir"><a href="../pages/Gira.html">Gira</a></li>
             </ul>
         </nav>
+        </div>    
+        </div>
     </header> 
 
     <main>
