--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagine Dragons</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="shortcut icon" href="multimedia/Imagine-Dragons-Logo-PNG.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
@@ -17,19 +18,19 @@
                 <label for="menu">
                     <i class="fa-solid fa-bars menu-icono"></i>
                 </label>        
-        <nav class="barra">
+            <nav class="barra">
             <ul>
                 <li id="int"><a href="pages/Integrantes.html">Integrantes</a></li>
                 <li id="his"><a href="pages/Historia.html">Historia</a></li>
                 <li id="dis"><a href="pages/Discografia.html">Discografia</a></li>
                 <li id="gir"><a href="pages/Gira.html">Gira</a></li>
             </ul>
-        </nav>
-        </div>    
+            </nav>
+            </div>    
         </div>
     </header>  
     <main id="inx">
-    <div class="call">
+    <div class="call" data-aos="zoom-in">
         <h1>Imagine Dragons</h1>
         <p>Imagine Dragons es una banda estadounidense de pop rock originaria de Las Vegas, Nevada. Está compuesta por Dan Reynolds (vocalista), Wayne Sermon (guitarrista), Ben McKee (bajista) y Daniel Platzman (baterista). Ganó el reconocimiento mundial con el lanzamiento de su álbum de estudio debut Night Visions (2012), y con su canción "It's Time".</p>
         <a href="/pages/Historia.html"> saber mas</a>
@@ -59,5 +60,9 @@
         </ul>
         </div>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 </html>
