agrego las etiquetas meta

--- a/pages/Discografia.html
+++ b/pages/Discografia.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="shortcut icon" href="../multimedia/Imagine-Dragons-Logo-PNG.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
+    <meta name="description" content="Escucha y disfruta de los mejores álbumes y éxitos de imagine dragons aquí y ahora">
+    <meta name="keywords" content="album, imagine, dragons, musica, pop, rock">
 </head>
 <body>
     <header>
