--- a/pages/Gira.html
+++ b/pages/Gira.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="shortcut icon" href="../multimedia/Imagine-Dragons-Logo-PNG.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
-    
     <title>Gira</title>
+    <meta name="description" content="Consigue aquí tus entradas para ir a los conciertos de imagine dragons">
+    <meta name="keywords" content="gira, imagine, dragons, fechas, pagina">
 </head>
 <body>
     <header>
