--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="shortcut icon" href="../multimedia/Imagine-Dragons-Logo-PNG.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
+    <meta name="description" content="Descubre la historia de Imagine Dragons es una agrupación musical originaria de Estados unidos que oscila entre los géneros del Rock alternativo, el Indie Rock y el Pop">
+    <meta name="keywords" content="historia, imagine, dragons, pagina, dan, reynolds">
 </head>
 <body>
 
