--- a/pages/Integrantes.html
+++ b/pages/Integrantes.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="shortcut icon" href="../multimedia/Imagine-Dragons-Logo-PNG.png" type="image/x-icon">
     <link rel="stylesheet" href="../styles.css">
+    <meta name="description" content="Descubre como se unieron los integrantes de imagine dragos y su pasado">
+    <meta name="keywords" content="pagina, integrantes, incorporacion, principios, imagine, dragons">
 </head>
 <body>
 
