--- a/pages/Discografia.html
+++ b/pages/Discografia.html
@@ -45,25 +45,25 @@
     </main>
     <footer>
     <div class="redes">
-    <a href="#">
-        <i class="fa-brands fa-x-twitter" ></i>
-    </a>
-    <a href="#">
-        <i class="fa-brands fa fa-instagram"></i>
-    </a>
-    <a href="#">
-        <i class="fa-brands fa-facebook"></i>
-    </a>    
+        <a href="https://twitter.com/Imaginedragons?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+            <i class="fa-brands fa-x-twitter" ></i>
+        </a>
+        <a href="https://www.instagram.com/imaginedragons/">
+            <i class="fa-brands fa fa-instagram"></i>
+        </a>
+        <a href="https://www.facebook.com/ImagineDragons/?locale=es_LA">
+            <i class="fa-brands fa-facebook"></i>
+        </a>      
     </div>
     <nav class="foo">
     <h3>este contenido esta protegido por copyright</h3> 
         <h4>paginas</h4>
     <ul>
-        <li id="hom"><a href="../index.html">Home</a></li>
-        <li id="int"><a href="../pages/Integrantes.html">Integrantes</a></li>
-        <li id="his"><a href="../pages/Historia.html">Historia</a></li>
-        <li id="dis"><a href="#">Discografia</a></li>
-        <li id="gir"><a href="../pages/Gira.html">Gira</a></li>
+        <li><a href="../index.html">Home</a></li>
+        <li><a href="../pages/Integrantes.html">Integrantes</a></li>
+        <li><a href="../pages/Historia.html">Historia</a></li>
+        <li><a href="#">Discografia</a></li>
+        <li><a href="../pages/Gira.html">Gira</a></li>
     </ul>
     </nav>
 
