--- a/pages/Gira.html
+++ b/pages/Gira.html
@@ -37,7 +37,8 @@
     <h1 class="h1-int">Gira</h1>
     <div class="imgi"></div>
     <div class="container col-sm-10 mt-4 p-1">
-    <table class="table table-bordered-danger text-white">      
+    <table class="table table-bordered-danger text-white">
+    <tr>
         <th class="col-sm-2">dia</th>
         <th class="col-sm-2">hora</th>
         <th class="col-sm-2">pais</th>
@@ -45,78 +46,78 @@
         <th class="col-sm-2">entradas</th>
     </tr>
     <tr>
-    <td class="col-sm-2">miércoles 23/8</td>
-    <td class="col-sm-2">10:00-23:00</td>
-    <td class="col-sm-2">Reino Unido</td>
-    <td class="col-sm-2">Leeds</td>
-    <td class="col-sm-2 boto"><a href="#">sacar</a></td>
-</tr>
-<tr>
-    <td class="col-sm-2">24/8-27/8</td>
-    <td class="col-sm-2">10:00-23:00</td>
-    <td class="col-sm-2">Reino Unido</td>
-    <td class="col-sm-2">Reading</td>
-    <td class="col-sm-2 boto"><a href="#">sacar</a></td>
-</tr>
-<tr>
-    <td class="col-sm-2">martes 29/8</td>
-    <td class="col-sm-2">18:00</td>
-    <td class="col-sm-2">Israel</td>
-    <td class="col-sm-2">Tel Aviv</td>
-    <td class="col-sm-2 bota"><a href="#">agotado</a></td>
-</tr>
-<tr>
-    <td class="col-sm-2">jueves 31/8</td>
-    <td class="col-sm-2">17:00</td>
-    <td class="col-sm-2">Georgia</td>
-    <td class="col-sm-2">tbilisi</td>
-    <td class="col-sm-2 boto"><a href="#">sacar</a></td>
-</tr>
-<tr>
-    <td class="col-sm-2">sábado 2/9</td>
-    <td class="col-sm-2">19:00</td>
-    <td class="col-sm-2">Azerbaiyán</td>
-    <td class="col-sm-2">Baku</td>
-    <td class="col-sm-2 bota"><a href="#">agotado</a></td>
-</tr>
-<tr>
-    <td class="col-sm-2">miércoler 22/8</td>
-    <td class="col-sm-2">17:30</td>
-    <td class="col-sm-2">Grecia</td>
-    <td class="col-sm-2">Atenas</td>
-    <td class="col-sm-2 boto"><a href="#">sacar</a></td>
-</tr>
-<tr>
-    <td class="col-sm-2">viernes 8/9</td>
-    <td class="col-sm-2">16:00</td>
-    <td class="col-sm-2">Grecia</td>
-    <td class="col-sm-2">Atenas</td>
-    <td class="col-sm-2 boto"><a href="#">sacar</a></td>
-</tr>
-</table>
-</div>    
+        <td class="col-sm-2">miércoles 23/8</td>
+        <td class="col-sm-2">10:00-23:00</td>
+        <td class="col-sm-2">Reino Unido</td>
+        <td class="col-sm-2">Leeds</td>
+        <td class="col-sm-2 boto"><a href="#">sacar</a></td>
+    </tr>
+    <tr>
+        <td class="col-sm-2">24/8-27/8</td>
+        <td class="col-sm-2">10:00-23:00</td>
+        <td class="col-sm-2">Reino Unido</td>
+        <td class="col-sm-2">Reading</td>
+        <td class="col-sm-2 boto"><a href="#">sacar</a></td>
+    </tr>
+    <tr>
+        <td class="col-sm-2">martes 29/8</td>
+        <td class="col-sm-2">18:00</td>
+        <td class="col-sm-2">Israel</td>
+        <td class="col-sm-2">Tel Aviv</td>
+        <td class="col-sm-2 bota"><a href="#">agotado</a></td>
+    </tr>
+    <tr>
+        <td class="col-sm-2">jueves 31/8</td>
+        <td class="col-sm-2">17:00</td>
+        <td class="col-sm-2">Georgia</td>
+        <td class="col-sm-2">tbilisi</td>
+        <td class="col-sm-2 boto"><a href="#">sacar</a></td>
+    </tr>
+    <tr>
+        <td class="col-sm-2">sábado 2/9</td>
+        <td class="col-sm-2">19:00</td>
+        <td class="col-sm-2">Azerbaiyán</td>
+        <td class="col-sm-2">Baku</td>
+        <td class="col-sm-2 bota"><a href="#">agotado</a></td>
+    </tr>
+    <tr>
+        <td class="col-sm-2">miércoler 22/8</td>
+        <td class="col-sm-2">17:30</td>
+        <td class="col-sm-2">Grecia</td>
+        <td class="col-sm-2">Atenas</td>
+        <td class="col-sm-2 boto"><a href="#">sacar</a></td>
+    </tr>
+    <tr>
+        <td class="col-sm-2">viernes 8/9</td>
+        <td class="col-sm-2">16:00</td>
+        <td class="col-sm-2">Grecia</td>
+        <td class="col-sm-2">Atenas</td>
+        <td class="col-sm-2 boto"><a href="#">sacar</a></td>
+    </tr>
+    </table>
+    </div>    
     </main>
-    <footer>
+<footer>
         <div class="redes">
-        <a href="#">
-            <i class="fa-brands fa-x-twitter" ></i>
-        </a>
-        <a href="#">
-        <i class="fa-brands fa fa-instagram"></i>
-        </a>
-        <a href="#">
-        <i class="fa-brands fa-facebook"></i>
-        </a>    
+            <a href="https://twitter.com/Imaginedragons?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+                <i class="fa-brands fa-x-twitter" ></i>
+            </a>
+            <a href="https://www.instagram.com/imaginedragons/">
+                <i class="fa-brands fa fa-instagram"></i>
+            </a>
+            <a href="https://www.facebook.com/ImagineDragons/?locale=es_LA">
+                <i class="fa-brands fa-facebook"></i>
+            </a>       
         </div>
     <nav class="foo">
         <h3>este contenido esta protegido por copyright</h3> 
         <h4>paginas</h4>
         <ul>
-            <li id="hom"><a href="../index.html">Home</a></li>
-            <li id="int"><a href="../pages/Integrantes.html">Integrantes</a></li>
-            <li id="his"><a href="../pages/Historia.html">Historia</a></li>
-            <li id="dis"><a href="../pages/Discografia.html">Discografia</a></li>
-            <li id="gir"><a href="#">Gira</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="../pages/Integrantes.html">Integrantes</a></li>
+            <li><a href="../pages/Historia.html">Historia</a></li>
+            <li><a href="../pages/Discografia.html">Discografia</a></li>
+            <li><a href="#">Gira</a></li>
         </ul>
     </nav>
 </footer>
