--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Historia</title>
+        <!-- bs -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+        <!-- bs -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="shortcut icon" href="../multimedia/Imagine-Dragons-Logo-PNG.png" type="image/x-icon">
@@ -38,58 +41,58 @@
         <p class="parra" data-aos="zoom-in">En 2008, el vocalista Dan Reynolds conoció al baterista Andrew Tolman en la Universidad Brigham Young, donde ambos eran estudiantes Reynolds y Tolman añadieron a Andrew Beck, Dave Lemke, y Aurora Florence para tocar la guitarra, el bajo, y el piano, respectivamente.</p>
         <img src="../multimedia/integrantes anteriores.jpg" alt=""class="imi" data-aos="zoom-in">
     <article class="contenedor-historia">
-        <div id="par1"class="histem" data-aos="fade-right">
+        <div id="par1"class="histem" data-aos="fade-up">
         <p class="parra">Su nombre es un anagrama de Ragged Insomnia que es el nombre con el que inició la banda, antes de cambiarlo a Imagine Dragons. Tolman reclutó a Wayne Sermon, su viejo amigo de la escuela secundaria, que se había graduado de Berklee College of Music, para tocar la guitarra. Tolman más tarde reclutó a su esposa, Brittany Tolman, para cantar en los coros.</p>
         </div>
-    <div id="img1" class="histem" data-aos="fade-left"></div>
-    <div id="par2"class="histem" data-aos="fade-right">
+    <div class="histem"data-aos="fade-up"> <img class="img" src="../multimedia/DAN-2.png" alt="dan cuando era joven"></div>
+    <div id="par2"class="histem" data-aos="fade-up">
         <p class="parra">Lemke dejó la banda más adelante, al mismo tiempo que Sermon reclutaba a otro estudiante de música de Berklee, Ben McKee, para trabajar como el bajista y terminar la formación La banda ganó un gran número de seguidores en su ciudad natal, Provo, Utah, antes de que los miembros se trasladaran a Las Vegas, la ciudad natal de Dan Reynolds, donde la banda grabó y lanzó sus primeros tres reproducciones extendidas (ep) La banda lanzó los EP titulados Imagine Dragons y Hell and Silence en 2010, ambos grabados en Battle Born Studios, en Las Vegas.</p>
     </div>
-    <div id="al1"class="histem linkalbum" data-aos="fade-left">
+    <div id="al1"class="histem linkalbum" data-aos="fade-up">
         <a href="https://youtu.be/r1epIsAgQeQ" class="linkalbum"> escuchar</a>
     </div>
-    <div id="par3"class="histem" data-aos="fade-right">
+    <div id="par3"class="histem" data-aos="fade-up">
         <p class="parra">Tuvieron su primer gran concierto cuando el vocalista de Train, Pat Monahan, cayó enfermo justo antes del Bite of Las Vegas Festival 2009. Imagine Dragons fue llamado para presentarse frente a una multitud de más de 26,000 personas. Lograron obtener varios premios locales. Eventualmente los Tolman dejarían el grupo y Daniel Platzman sería reclutado en agosto de 2011 por invitación de Ben McKee, junto a la tecladista Theresa Flaminio; antes de la firma del contrato discográfico de la banda en noviembre de 2011</p>
     </div>
-    <div id="img2"class="histem" data-aos="fade-left"></div>
-    <div id="par4"class="histem" data-aos="fade-right">
+    <div class="histem" data-aos="fade-up"><img class="img" src="../multimedia/daniel-platzman3.png" alt="daniel Platzman en entrevista"></div>
+    <div id="par4"class="histem" data-aos="fade-up">
     <p class="parra">Theresa Flaminio partió de Imagine Dragons a principios de 2012, dejándolos como un cuarteto. La banda trabajó en estrecha colaboración con Alex da Kid, con quien grabaron su primer gran lanzamiento en Westlake Recording Studios en West Hollywood, California. Un EP titulado <a href="https://open.spotify.com/intl-es/album/    5eJa2BP7rrqkrpFpTiANPg?autoplay=true" class="con">Continued Silence</a> fue lanzado el día de San Valentín. El cual fue el primer gran exito estando los integrantes actuales</p>
-</div>
-<div id="img3"class="histem" data-aos="fade-left"></div>
-<div id="par5"class="histem" data-aos="fade-right">
+    </div>
+    <div class="histem" data-aos="fade-up"> <img class="img" src="../multimedia/ImagineDragons2013.jpg" alt="imagine dragons en 2013"></div>
+    <div id="par5"class="histem" data-aos="fade-up">
     <p class="parra">Entonces fue en ese momento cuando imagine dragons nació en su versión actual donde hicieron mas sencillos como <a href="https://open.spotify.com/intl-es/track/62yJjFtgkhUrXktIoSjgP2?si=63f951acc61941fd" class="con">radioactive</a>Alcanzó el primer lugar en las listas Billboard Alternative Songs, Billboard Rock Songs y la lista de éxitos musicales de Suecia, y ha vendido más de siete millones de copias en Estados Unidos, rompiendo récords al pasar 87 semanas en el Billboard Hot 100. "Radioactive" se mantuvo en el número 1 de la lista Hot Rock Songs estableciendo un nuevo récord de 23 semanas y, en última instancia, se convirtió en el mayor éxito, dentro del género, de 2013.</p>
 </div>
-<div id="img4"class="histem" data-aos="fade-left"></div>
-<div id="par6"class="histem" data-aos="fade-right">
+<div class="histem" data-aos="fade-up"><img class="img" src="../multimedia/Imagine_Dragons2015.jpg" alt="imagine dragons en 2015"></div>
+<div id="par6"class="histem" data-aos="fade-up">
     <p class="parra">En febrero de 2015 lanzaron su segundo gran álbum junto a una gira y este fue smoke + mirror y en julio del mismo año empezó su gira. Donde fueron haciendo más sencillos como Roots y I Was Me a fines de 2015 Dan anuncio que la banda se tomaría un descanso debido a que llevan 6 años sin parar. Pero a cambio la banda estrenó una "película de conciertos" titulada Imagine Dragons In Concert: Smoke + Mirrors, en algunos cines el 2 de marzo de 2016. La película fue lanzada en DVD y Blu-Ray bajo el título Imagine Dragons: Smoke + Mirrors Live.</p>
 </div>
-<div id="al2"class="histem linkalbum" data-aos="fade-left">
+<div id="al2"class="histem linkalbum" data-aos="fade-up">
     <a href="https://www.youtube.com/watch?v=HmZl4Bf_V9g&list=PLFbqC_gGwNLn5DQ_E0awLwikA4MIv-4rY" class="linkalbum">escuchar</a>
 </div>
-<div id="par7"class="histem" data-aos="fade-right">
+<div id="par7"class="histem" data-aos="fade-up">
     <p class="parra">El 27 de septiembre de 2016, Imagine Dragons empezó a insinuar sobre su tercer álbum de estudio con un tuit que decía "estudio". La banda continuó publicando mensajes crípticos en su cuenta de Twitter durante los próximos cuatro meses. El 24 de enero de 2017, la banda comenzó a publicar una serie de videos que probablemente anunciaban el primer sencillo del álbum. Luego el 31 de enero, Imagine Dragons lanzó "Believer" como el sencillo principal de su próximo disco "evolve".</p>
 </div>
-<div id="al3" class="histem linkalbum" data-aos="fade-left">
+<div id="al3" class="histem linkalbum" data-aos="fade-up">
 <a href="https://www.youtube.com/watch?v=KZH3JTBQU20&list=PLxHbCgqszsrEHxb7P9oTqsby8J977Ei2u" class="linkalbum">escuchar</a>
 </div>
-<div id="img5" class="histem" data-aos="fade-right"></div>
-<div id="par8" class="histem" data-aos="fade-left">
+<div class="histem" data-aos="fade-up"><img class="img" src="../multimedia/Imagine_Dragons-2017.jpg" alt="imagine dragons en 2017"></div>
+<div id="par8" class="histem" data-aos="fade-up">
     <p class="parra">El 3 de octubre de 2018, Imagine Dragons anunció su cuarto álbum de estudio, Origins, que se lanzó el 9 de noviembre de 2018. "Natural" y "Zero" son los sencillos principales del álbum. La banda ha descrito este álbum como un álbum hermano de su trabajo anterior Evolve, declarando que Origins completará ese ciclo de su música. En diciembre de 2019 Dan Reynolds, vocalista de la banda, anunció que se retirarían temporalmente, pues después de más de una década de dedicarse a la música, necesitaban tiempo libre para cuidar de su familia.
     </p>
 </div>
-<div id="al4"class="histem linkalbum" data-aos="fade-right" data-aos="fade-left">
+<div id="al4"class="histem linkalbum" data-aos="fade-up" data-aos="fade-up">
 <a href="https://www.youtube.com/watch?v=pXu6JC6-d_o&list=PLEKcXlu8muk8iXrU5Fbh37R-wftrttjov" class="linkalbum">escuchar</a>
 </div>
-<div id="par9"class="histem" data-aos="fade-left">
+<div id="par9"class="histem" data-aos="fade-up">
     <p class="parra">El 8 de marzo de 2021, la banda anunció  si vuelta con el lanzamiento del sencillo doble Follow You y Cutthroat, cuyo estreno fue el 12 de marzo mas tarde en septiembre fue lanzado Mercury Act 1 El lanzamiento del álbum coincidió con el anuncio de la cuarta gira de conciertos de la bandaAsimismo, la banda lanzó dos sencillos promocionales en apoyo al álbum como Monday, cuyo vídeo musical se estrenó el 24 de septiembre y Lonely En octubre, Imagine Dragons y el rapero J.I.D lanzaron el sencillo Enemy, como el tema principal de la serie animada Arcane, de Netflix y Riot Games. Debido al buen recibimiento de la canción, esta fue añadida a este album</p>
 </div>
-<div id="al5"class="histem linkalbum" data-aos="fade-right">
+<div id="al5"class="histem linkalbum" data-aos="fade-up">
 <a href="https://www.youtube.com/watch?v=Y2NkuFIlLEo&list=PLG7Rcw-np_6dxpvztJo21zPsJkatiSUcG"class="linkalbum">escuchar</a>
 </div>
-<div id="par10"class="histem" data-aos="fade-left">
+<div id="par10"class="histem" data-aos="fade-up">
     <p class="parra">El 11 de marzo de 2022, la banda lanzó Bones, como el sencillo principal de su sexto álbum de estudio, Mercury  Act 2. El 6 de abril, la banda anunció que Mercury  Act 2 se lanzaría el 1 de julio de 2022 y estaría compuesto de 18 pistas, siendo publicado como parte de un álbum recopilatorio, en compañía de Mercury  Act 1 Luego del estreno de Sharks, la banda publicó el trailer oficial de Mercury  Act 2, en el que aparecieron tres fragmentos de otras canciones pertenecientes al álbum: Younger, Ferris Wheel y Symphony. Finalmente, el 1 de julio de 2022, se estrenó el álbum doble Mercury  Acts 1 & 2, el cual recopila en dos discos sus quinto y sexto álbumes de estudio: Mercury Act 1 y Mercury  Act 2, respectivamente.</p>
 </div>
-<div id="al6"class="histem linkalbum" data-aos="fade-right">
+<div id="al6"class="histem linkalbum" data-aos="fade-up">
 <a href="https://www.youtube.com/watch?v=Te3_VlimRw0&list=PLG7Rcw-np_6fKh-3T7KPO1VkbANgL5-RC"class="linkalbum">escuchar</a>
 </div>
 </article>
@@ -97,15 +100,15 @@
     
     <footer>
         <div class="redes">
-        <a href="#">
-            <i class="fa-brands fa-x-twitter" ></i>
-        </a>
-        <a href="#">
-        <i class="fa-brands fa fa-instagram"></i>
-        </a>
-        <a href="#">
-        <i class="fa-brands fa-facebook"></i>
-        </a>    
+            <a href="https://twitter.com/Imaginedragons?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+                <i class="fa-brands fa-x-twitter" ></i>
+            </a>
+            <a href="https://www.instagram.com/imaginedragons/">
+                <i class="fa-brands fa fa-instagram"></i>
+            </a>
+            <a href="https://www.facebook.com/ImagineDragons/?locale=es_LA">
+                <i class="fa-brands fa-facebook"></i>
+            </a>      
         </div>
     <nav class="foo">
         <h3>este contenido esta protegido por copyright</h3> 
@@ -122,6 +125,7 @@
 <a href="#" class="subir">
     <i class="fa-solid fa-angle-up"></i>
 </a>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init();
