--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagine Dragons</title>
+    <!-- bs -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- bs -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="shortcut icon" href="multimedia/Imagine-Dragons-Logo-PNG.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
-    <meta name="description" content="pagina principal con una breve descripcion">
+    <meta name="description" content="Conoce a la banda de las vegas más conocida, así es imagine dragons ganadora de incontables premios ">
     <meta name="keywords" content="imagine, dragons, home, principal, pagina">
 </head>
 <body>
@@ -35,33 +38,34 @@
     <div class="call" data-aos="zoom-in">
         <h1>Imagine Dragons</h1>
         <p>Imagine Dragons es una banda estadounidense de pop rock originaria de Las Vegas, Nevada. Está compuesta por Dan Reynolds (vocalista), Wayne Sermon (guitarrista), Ben McKee (bajista) y Daniel Platzman (baterista). Ganó el reconocimiento mundial con el lanzamiento de su álbum de estudio debut Night Visions (2012), y con su canción "It's Time".</p>
-        <a href="/pages/Historia.html"> saber mas</a>
+        <a href="pages/Historia.html"> saber mas</a>
     </div> 
     </main>
     <footer>
         <div class="redes">
-        <a href="#">
+        <a href="https://twitter.com/Imaginedragons?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
             <i class="fa-brands fa-x-twitter" ></i>
         </a>
-        <a href="#">
+        <a href="https://www.instagram.com/imaginedragons/">
             <i class="fa-brands fa fa-instagram"></i>
         </a>
-        <a href="#">
+        <a href="https://www.facebook.com/ImagineDragons/?locale=es_LA">
             <i class="fa-brands fa-facebook"></i>
         </a>    
         </div>
-        <div class="foo">
+        <nav class="foo">
         <h3>este contenido esta protegido por copyright</h3> 
         <h4>paginas</h4>
         <ul>
-            <li id="hom"><a href="#">Home</a></li>
-            <li id="int"><a href="pages/Integrantes.html">Integrantes</a></li>
-            <li id="his"><a href="pages/Historia.html">Historia</a></li>
-            <li id="dis"><a href="pages/Discografia.html">Discografia</a></li>
-            <li id="gir"><a href="pages/Gira.html">Gira</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="pages/Integrantes.html">Integrantes</a></li>
+            <li><a href="pages/Historia.html">Historia</a></li>
+            <li><a href="pages/Discografia.html">Discografia</a></li>
+            <li><a href="pages/Gira.html">Gira</a></li>
         </ul>
-        </div>
+        </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
