--- a/pages/Integrantes.html
+++ b/pages/Integrantes.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Integrantes</title>
+    <!-- bs -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- bs -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link rel="shortcut icon" href="../multimedia/Imagine-Dragons-Logo-PNG.png" type="image/x-icon">
@@ -36,61 +39,62 @@
     <main class="integ">
             <h1 class="h1-int" data-aos="zoom-in">Integrantes De Imagine Dragons</h1>
             <img src="/multimedia/grupo.webp"   class="imi" data-aos="zoom-in" alt="">
-            <section class="secint">
-                <div class="item item1" data-aos="fade-right"></div>
-                <article class="card rig" data-aos="fade-left">
+            <section class="secint" data-aos="zoom-in">
+                <img class="item" src="../multimedia/DAN.jpg" alt="imagen de Dan Reynolds">
+                <article class="car">
                 <h3>Dan Reynolds</h3>
                 <p>Daniel Coulter Reynolds Dan, es el séptimo de nueve hijos, nació el 14 de julio en 1987 en Las Vegas, más conocido como Dan Reynolds, es un cantante, compositor y músico estadounidense, reconocido por ser el vocalista principal desde 2009</p>
                 </article>
             </section>
-            <section class="secint">
-                <article class="card lef" data-aos="fade-right">
+            <section class="secint" data-aos="zoom-in">
+                <article class="car">
                     <h3>Daniel Wayne Sermon</h3>
                     <p>Daniel Wayne Sermon nacido en las Vegas, Nevada, 15 de junio de 1984 es un compositor, músico y productor discográfico estadounidense; mayormente conocido por ser el guitarrista de la banda. Wayne comenzó desde temprana edad a tocar el chelo y la guitarra. Desde que era niño estaba decidido a ser guitarrista. Desde 2009 es integrante de Imagine Dragons</p>
                 </article>
-                <div class="item item2" data-aos="fade-left"></div>
+                <img class="item" src="/multimedia/sermon2.jpg" alt="imagen de daniel sermon">
             </section>
-            <section class="secint">
-                <div class="item item3" data-aos="fade-right"></div>
-                <article class="card lef" data-aos="fade-left">
-                <h3>Ben McKee</h3>
-                <p>Benjamin Arthur McKee nacido en Forestville, California, 7 de abril de 1985, más conocido como Ben McKee, es un músico estadounidense, mayormente conocido por ser el bajista de la banda desde 2009</p>
-            </section>
-            <section class="secint">
+            <section class="secint" data-aos="zoom-in">
+                <img class="item" src="../multimedia/mckee-5.jpg" alt="imagen de ben m">
+                <article class="car">
+                    <h3>Ben McKee</h3>
+                    <p>Benjamin Arthur McKee nacido en Forestville, California, 7 de abril de 1985, más conocido como Ben McKee, es un músico estadounidense, mayormente conocido por ser el bajista de la banda desde 2009</p>
                 </article>
-                <article class="card rig" data-aos="fade-right">
+            </section>
+            <section class="secint" data-aos="zoom-in">
+                <article class="car">
                     <h3>Daniel Platzman</h3>
                     <p>Daniel James Platzman, más conocido como Daniel Platzman, es un músico estadounidense, más conocido por ser el baterista de la banda desde 2011. Platzman nació el 28 de septiembre de 1986 en Atlanta, Georgia. antes de unirse a la banda Estudió en Berklee School of Music, donde obtuvo un grado en la composición de bandas sonoras </p>
                     </article>
-                <div class="item item4" data-aos="fade-left"></div>
+                <img class="item" src="../multimedia/daniel-platzman.webp" alt="imagen de daniel platzman">
             </section>
     </main>
 
     <footer>
         <div class="redes">
-        <a href="#">
-            <i class="fa-brands fa-x-twitter" ></i>
-        </a>
-        <a href="#">
-        <i class="fa-brands fa fa-instagram"></i>
-        </a>
-        <a href="#">
-        <i class="fa-brands fa-facebook"></i>
-        </a>    
+            <a href="https://twitter.com/Imaginedragons?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">
+                <i class="fa-brands fa-x-twitter" ></i>
+            </a>
+            <a href="https://www.instagram.com/imaginedragons/">
+                <i class="fa-brands fa fa-instagram"></i>
+            </a>
+            <a href="https://www.facebook.com/ImagineDragons/?locale=es_LA">
+                <i class="fa-brands fa-facebook"></i>
+            </a>     
         </div>
         <nav class="foo">
         <h3>este contenido esta protegido por copyright</h3> 
         <h4>paginas</h4>
         <ul>
-            <li id="hom"><a href="../index.html">Home</a></li>
-            <li id="int"><a href="#">Integrantes</a></li>
-            <li id="his"><a href="../pages/Historia.html">Historia</a></li>
-            <li id="dis"><a href="../pages/Discografia.html">Discografia</a></li>
-            <li id="gir"><a href="../pages/Gira.html">Gira</a></li>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="#">Integrantes</a></li>
+            <li><a href="../pages/Historia.html">Historia</a></li>
+            <li><a href="../pages/Discografia.html">Discografia</a></li>
+            <li><a href="../pages/Gira.html">Gira</a></li>
         </ul>
         </ul>
         </nav>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
